# marketspot

./: .dockerignore  .env.example  .gitignore  Dockerfile.prod  LICENSE  README.en.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/.omc/state/: agent-replay-104c0889-6a8f-4c67-b5a7-0be837cbaaf1.jsonl  hud-stdin-cache.json  idle-notif-cooldown.json
backend/app/: __init__.py  cache.py  config.py  deps.py  indicators.py  main.py  models.py  portfolio_store.py  transaction_store.py
backend/app/ai/: __init__.py  base.py  ollama_backend.py  rule_based.py
backend/app/analytics/: drawdown.py  holdings.py  risk.py
backend/tests/: fakes.py  test_api.py  test_cache.py  test_calendar_provider.py  test_chart_service.py  test_coach_prompt.py  test_conditions_service.py  test_drawdown.py  test_filings_api.py  test_filings_provider.py  test_filings_service.py  test_fundamentals_provider.py  test_fx_service.py  test_holdings.py  test_home_service.py  test_indicators.py  test_last_good.py  test_macro_provider.py  test_models.py  test_news_provider.py  test_news_service.py  test_ollama_parse.py  test_portfolio_api.py  test_portfolio_service.py  test_portfolio_store.py  test_reassurance_service.py  test_registry.py  test_risk_analytics.py  test_risk_service.py  test_rule_based.py  test_search_provider.py  test_settings_api.py  test_settings_cache.py  test_startup_migration.py  test_toss_client.py  test_toss_provider.py  test_toss_router.py  test_toss_sync.py  test_transaction_store.py  test_valuation_service.py  (+1 more)
(+150 files in other folders)
